--- a/templates/authoring-tool-modal.html
+++ b/templates/authoring-tool-modal.html
@@ -18,7 +18,7 @@ div.modal-content{
   .modal.right .modal-dialog {
     position: fixed;
     margin: auto;
-    width: 440px;
+    width: 450px;
     height: calc(100% - 53px);
     -webkit-transform: translate3d(0%, 0, 0);
         -ms-transform: translate3d(0%, 0, 0);
@@ -40,10 +40,11 @@ div.modal-content{
 /*Left*/
   .modal.left.fade .modal-dialog{
     left: -320px;
-    -webkit-transition: opacity 0.2s linear, left 0.2s ease-out;
-       -moz-transition: opacity 0.2s linear, left 0.2s ease-out;
-         -o-transition: opacity 0.2s linear, left 0.2s ease-out;
-            transition: opacity 0.2s linear, left 0.2s ease-out;
+    top:53px;
+    -webkit-transition: opacity 0.0s linear, left 0.0s ease-out;
+       -moz-transition: opacity 0.0s linear, left 0.0s ease-out;
+         -o-transition: opacity 0.0s linear, left 0.0s ease-out;
+            transition: opacity 0.0s linear, left 0.0s ease-out;
   }
 
   .modal.left.fade.in .modal-dialog{
