--- a/templates/question.html
+++ b/templates/question.html
@@ -67,7 +67,8 @@ h1 {
 
 {% if q.spec.type == "longtext" %}
 #question .ql-container {
-  font-size: 14pt !important; /* override default quill style */
+  font-size: 10pt !important; /* override default quill style */
+  /*font-family: trebuchet ms;*/
 }
 #question .ql-container p {
   margin-bottom: .75em;
@@ -128,8 +129,29 @@ label:hover .onhover { display: inline; }
 
 {{block.super}}
 
-<div class="row">
-  <div id="focus-area-wrapper" class="col-sm-8 col-md-9">
+<!-- <div class="row"> -->
+  <div id="context-area-wrapper" class="col-xs-0 col-sm-2 col-md-3 col-lg-3"
+       style="
+              background-color: rgb(230, 230, 230);
+              border-radius: 6px;
+              /*color: white;*/
+             ">
+    {% include "task-progress-project-list.html" with previous="question" %}
+  </div>
+
+  <div class="col-spacer col-xs-0 col-sm-0 col-md-0 col-lg-1">
+    &nbsp;
+  </div>
+
+  <div id="focus-area-wrapper" class="col-xs-12 col-sm-8 col-md-7 col-lg-7">
+    <div style="
+      margin-top: -20px;
+      margin-bottom: 20px;
+      color: #999;
+      ">
+      <!-- <small>{{task.title}}</small> -->
+    </div>
+
     {% if source_invitation %}
       <div style="margin-bottom: 2em">
         <div id="source-invitation-show" style="text-align: right; margin-bottom: -1.5em; {% if not task.is_started %}display: none;{% endif %}">
@@ -144,7 +166,34 @@ label:hover .onhover { display: inline; }
         </div>
       </div>
     {% endif %}
+    <!-- 
+        <pre>TESTING
 
+        task.id: {{task.id}}
+        task.project: {{task.project}}
+        task.project.root_task: {{task.project.root_task.}}
+
+        task.module: {{task.module}}
+        task.module.spec: {{task.module.spec}}
+        task.project.get_open_tasks {{task.project.get_open_tasks}}
+
+        root_task_answers: {{root_task_answers}}
+        root_task_answers.as_dict: {{root_task_answers.as_dict}}
+
+        {% for tp in root_task_answers.answer_tuples %}
+          {{tp}}
+        {% endfor %}
+
+        {% for ta in root_task_answers.as_dict %}
+          {{ta}} 
+            {{ta}}
+        {% endfor %}
+
+
+        {{m.app}}
+        
+      </pre>
+    -->
     <h1>{{title|safe}}</h1>
 
     <div id="question">
@@ -515,17 +564,19 @@ label:hover .onhover { display: inline; }
                       </button>
                   {% endif %}
                 </div> {# /.pull-left #}
-              </div> <!-- /action-buttons -->
 
-            {% if answer_obj and can_review %}
-              <select style="display: block; margin: 1em 0; font-size: 80%; background-color: white; padding: .2em .2em .15em .2em" onchange="update_review_status(this)">
-                {% for key, label in review_choices %}
-                  <option value="{{key}}" {% if answer_obj.reviewed == key %}selected{% endif %}>
-                    {{label}}
-                  </option>
-                {% endfor %}
-              </select>
-            {% endif %}
+                <div class="pull-right" style="margin-top: -10px;">
+                  {% if answer_obj and can_review %}
+                  <select style="display: block; margin: 1em 0; font-size: 80%; background-color: white; padding: .2em .2em .15em .2em" onchange="update_review_status(this)">
+                    {% for key, label in review_choices %}
+                      <option value="{{key}}" {% if answer_obj.reviewed == key %}selected{% endif %}>
+                        {{label}}
+                      </option>
+                    {% endfor %}
+                  </select>
+                {% endif %}
+                </div>
+              </div> <!-- /action-buttons -->
 
           {% else %} {# write_priv #}
             {# User does not have write permission so cannot answer the question, start a discussion, or change the editor. But we instead still want to show the review state. #}
@@ -542,16 +593,26 @@ label:hover .onhover { display: inline; }
         </form>
     </div> <!-- /question -->
 
-    {% include "discussion/discussion.html" %}
+    <div>
+      {% include "discussion/discussion.html" %}
+    </div>
   </div> <!-- /focus-area-wrapper -->
 
-  <div class="col-xs-12 col-sm-4 col-md-3">
+  <div class="col-spacer col-xs-0 col-sm-0 col-md-0 col-lg-1">
+    &nbsp;
+  </div>
+
+<!--   <div class="col-spacer col-xs-0 col-sm-0 col-md-0 col-lg-1">
+    &nbsp;
+  </div> -->
+
+<!--   <div class="col-xs-12 col-sm-2 col-md-3 col-lg-2">
     <div id="question-history-context">
         <ul>
         {% if context %}
           <p>Progress:</p>
           {% include "task-progress-question-list.html" with previous="question" %}
-          <div style="font-size: 10px; line-height: 120%; padding-left: 2em; color: #222;">
+          <div style="font-size: 10px; line-height: 120%; padding-left: 2em; color: #222; ">
           <li>&middot;</li>
           <li>&middot;</li>
           <li>&middot;</li>
@@ -561,28 +622,11 @@ label:hover .onhover { display: inline; }
           </li>
         {% endif %}
         </ul>
-    </div> <!-- /question-history-context -->
+    </div> --> <!-- /question-history-context -->
 
-    {% if authoring_tool_enabled %}
-    <div id="author-tools" style="margin: 1em 0; font-size: 80%;">
-      <a id="show_question_authoring_tool" href="#" onclick="show_question_authoring_tool('{{q.key|escapejs}}'); return false;">
-        <span class="glyphicon glyphicon-pencil" style="color: "></span>
-        Edit
-      </a>
-      &nbsp;&nbsp;
-      <a id="add_new_question" href="#" target="_blank" onclick="authoring_tool_new_question({{task.id}}, false); return false;">
-        <span class="glyphicon glyphicon-plus-sign"></span>
-        New
-      </a>
-      &nbsp;&nbsp;
-      <a id="download_questionnaire" href="#" target="_blank" onclick="authoring_tool_download_app('{{q.key|escapejs}}'); return false;">
-        <span class="glyphicon glyphicon-eye-open"></span>
-        Source
-      </a>
-    </div>
-    {% endif %}
+<!-- 
   </div>
-</div> <!-- /row -->
+</div>  --><!-- /row -->
 
 {% if authoring_tool_enabled %}
 {# should be in body so that it comes before the global error modal so that ajax errors show on top of this #}
