--- a/templates/task-base.orig.html
+++ b/templates/task-base.orig.html
@@ -14,7 +14,7 @@
     max-width: 450px;
   }
 
-  #question-history-context, #question-debug-links {
+  #question-history-context, #author-tools, #question-debug-links {
     font-size: 0.85em;
     background-color: rgba(255,255,255,0.2);
     padding: 8px;
@@ -66,9 +66,6 @@
 </style>
 {% endblock %}
 
-  {% block navbar %}
-  {% endblock %}
-
   {% block breadcrumbs %}
     {% if not task.project.is_account_project %}
     <!-- <li>
@@ -88,13 +85,11 @@
         </a>
       </li>
     {% endfor %}
-  -->
-<!--     <li class="hidden-xs">
+    <li class="hidden-xs">
       <a href="{{task.project.get_absolute_url}}">
         {{task.project.title}}
       </a>
-    </li> -->
-    <!--
+    </li>
     {% endif %}
     <li class="active">
       {{task.title}}
@@ -126,30 +121,11 @@
       </div> -->
 
 
-    {% if is_admin %}
+  <!--   {% if is_admin %}
     <div class="pull-right hidden-xs">
-      <a href="#" onclick="return delete_task();"><span class="glyphicon glyphicon-trash" title="Delete answers" style="color: #BBB;"></span></a>
+      <a href="#" onclick="return delete_task();"><span class="glyphicon glyphicon-trash" style="color: #BBB;"></span></a>
     </div>
-    {% endif %}
-
-    {% if authoring_tool_enabled %}
-    <div id="author-tools" class="pull-right" style="font-size: 80%; margin-right: 8px;">
-      <a id="show_question_authoring_tool" href="#" onclick="show_question_authoring_tool('{{q.key|escapejs}}'); return false;">
-        <span class="glyphicon glyphicon-pencil" title="Edit" style="color: #aaa;"></span>
-        <!-- Edit -->
-      </a>
-      &nbsp;&nbsp;
-      <a id="add_new_question" href="#" target="_blank" onclick="authoring_tool_new_question({{task.id}}, false); return false;">
-        <span class="glyphicon glyphicon-plus-sign" title="New Question" style="color: #aaa;"></span>
-        <!-- New -->
-      </a>
-      &nbsp;&nbsp;
-      <a id="download_questionnaire" href="#" target="_blank" onclick="authoring_tool_download_app('{{q.key|escapejs}}'); return false;">
-        <span class="glyphicon glyphicon-eye-open" title="View Source" style="color: #aaa;"></span>
-        <!-- Source -->
-      </a>
-    </div>
-    {% endif %}
+    {% endif %} -->
 
   {% endblock %}
 
