--- a/templates/question.html
+++ b/templates/question.html
@@ -173,7 +173,7 @@ label:hover .onhover { display: inline; }
                   </div>
                 </div>
                 <div class="toggler"
-                     style="text-align: right; font-style: italic; font-size: 90%;">
+                     style="text-align: left; font-style: italic; font-size: 90%;">
                   <a
                      href="#more"
                      onclick="$(this).parents('.expandable').find('.expandy').data('original-height', $(this).parents('.expandable').find('.expandy').height()); $(this).parents('.expandable').find('.expandy').animate({ minHeight: $(this).parents('.expandable').find('.expandy>div').outerHeight() + $(this).parents('.expandable').find('.toggler').outerHeight() }); $(this).parents('.expandable').find('a[href=&quot;#more&quot;]').hide(); $(this).parents('.expandable').find('a[href=&quot;#less&quot;]').show(); return false;">Show more</a>
