--- a/templates/task-base.html
+++ b/templates/task-base.html
@@ -71,7 +71,7 @@
 
   {% block breadcrumbs %}
     {% if not task.project.is_account_project %}
-    <!-- <li>
+    <li>
       <a href="/">
         <span class="glyphicon glyphicon-home" style="margin-right: .25em"></span>
       </a>
@@ -88,19 +88,20 @@
         </a>
       </li>
     {% endfor %}
-  -->
-<!--     <li class="hidden-xs">
+
+    <li class="hidden-xs">
       <a href="{{task.project.get_absolute_url}}">
         {{task.project.title}}
       </a>
-    </li> -->
-    <!--
+    </li>
+
     {% endif %}
     <li class="active">
       {{task.title}}
-    </li> -->
+    </li>
 
-    <!-- <div class="row">
+    <!-- <div class="row"> -->
+<!--
       <div class="col-spacer col-xs-0 col-sm-0 col-md-0 col-lg-1">
         &nbsp;
       </div>
@@ -108,7 +109,7 @@
       <div class="col-xs-12 col-sm-8 col-md-7 col-lg-7" style="text-align: center;">
         <a href="{{task.project.get_absolute_url}}">
           {{task.project.title}}
-        </a> 
+        </a>
         /
         {{task.title}}
       </div>
@@ -116,8 +117,8 @@
         <div class="col-spacer col-xs-0 col-sm-0 col-md-0 col-lg-1">
         &nbsp;
       </div>
-
-      <div id="context-area-wrapper" class="col-xs-0 col-sm-2 col-md-3 col-lg-3">
+-->
+<!--       <div id="context-area-wrapper" class="col-xs-0 col-sm-2 col-md-3 col-lg-3">
           {% if is_admin %}
           <div class="pull-right hidden-xs">
             <a href="#" onclick="return delete_task();"><span class="glyphicon glyphicon-trash" style="color: #BBB;"></span></a>
