Proper display of group tasks on question page
Complete the gyrations nessary to find other apps/tasks in
a top level grouping from within the question page in order
to give user the impression they are within a question set within
a module.

Basically, this involves re-creating much of the project.html page within
task-progress-project-list.html. So we need to get new information
from within the guidedmodules.views.show_question method to
have the data we need to pass to task-progress-project-list.html.

This also pretty tricky, because some questions that appear in
the task-progress-project-list do not have task ids b/c they
have not been started. So we have to create the form to start
a new task. And then we have to try and line up the form with the
non form items.

This hack will probably only work for a flat app with all modules
scoped at the same level. We are scoping everything at the same
level in order to get parameter sharing better between the simulate
groups until we can do deeper refactoring of the database.

It would propbably make sense (and it is noted in the code) to refactor
the code block that generates the history text.
modified:   guidedmodules/views.py
modified:   templates/project.html
modified:   templates/task-base.html
modified:   templates/task-progress-project-list.html
modified:   templates/question.html
modified:   templates/task-progress-question-list.html

modified:   VERSION
modified:   guidedmodules/module_logic.py
modified:   siteapp/models.py
modified:   siteapp/static/css/govready-q.css
modified:   templates/module-finished.html
modified:   templates/project-base.html
modified:   templates/task-progress-question-list.html

--- a/templates/project-base.html
+++ b/templates/project-base.html
@@ -30,7 +30,7 @@ div.subtitle {
 }
 
 .breadcrumb {
-  font-size: .8em;
+  font-size: 1.0em;
 }
 </style>
 {% endblock %}
@@ -41,9 +41,9 @@ div.subtitle {
       <span class="glyphicon glyphicon-home" style="margin-right: .25em"></span>
     </a>
   </li>
-  <li>
-    <a href="{{project.organization.get_absolute_url}}">
-      {{project.organization.name}}
+  <li class="hidden-xs">
+    <a href="{{project.portfolio.get_absolute_url}}">
+      {{project.portfolio.title}}
     </a>
   </li>
   {% for parent_project in project.get_parent_projects %}
@@ -83,12 +83,11 @@ div.subtitle {
       {% endif %}
 
       {% if project.organization %}
-      {% with project.title as title %}
       <h1 id="project-title">
-        {{project.organization.name}} / 
-        {{title}}
+        {{project.title}}
         {% block title_suffix_text %}
         {% endblock %}
+        <br><small>Project ID: {{project.id}} &nbsp;|&nbsp; Portfolio: <a href="{{project.portfolio.get_absolute_url}}" style="color: inherit;">{{project.portfolio.title}}</a></small>
       </h1>
 
       {% if title != project.root_task.module.spec.title %}
@@ -96,7 +95,6 @@ div.subtitle {
         {{project.root_task.module.spec.title}}
       </div>
       {% endif %}
-      {% endwith %}
       {% endif %}
       <div class="clearfix"></div>
 
