--- a/templates/module-finished.html
+++ b/templates/module-finished.html
@@ -10,7 +10,6 @@
   {{ block.super }}
 
 <div class="row">
-
   <div id="focus-area-wrapper" class="col-sm-12 col-md-10 col-lg-8">
 
     {% if top_of_page_output %}
@@ -18,166 +17,158 @@
         {{top_of_page_output.html|safe}}
       </div>
     {% elif had_any_questions %}
-    <div id="page-transition-paragraph">
-      {% if previous_page_type == "project" %}
-        <p>This module was last updated on {{task.updated|date}}.</p>
-      {% elif previous_page_type == "nquestion" %}
-        <p>You have completed the module.</p>
-      {% endif %}
-    </div>
+      <div id="page-transition-paragraph">
+        {% if previous_page_type == "project" %}
+          <p>This module was last updated on {{task.updated|date}}.</p>
+        {% elif previous_page_type == "nquestion" %}
+          <p>You have completed the module.</p>
+        {% endif %}
+      </div>
     {% endif %}
 
-<div id="accordion" class="panel-group" role="tablist" aria-multiselectable="true">
-  {# output documents #}
+    <div id="accordion" class="panel-group" role="tablist" aria-multiselectable="true">
+      {# output documents #}
 
-  {% if had_any_questions %}
-    <div class="panel panel-default">
-      <div class="panel-heading" rol="tab" id="your-answers-title">
-        <h4 class="panel-title">
-          <a role="button" data-toggle="collapse" data-parent="#accordion" href="#your-answers-body" aria-expanded="true" aria-controls="your-answers-body">
-            Your Answers
-          </a>
-        </h4>
-      </div>
-      <div id="your-answers-body" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="your-answers-title">
-        <div class="panel-body output-document">
-          <table class="table">
-            <thead>
-              <tr>
-                <th width="40%">Question</th>
-                <th>Answer</th>
-              </tr>
-            </thead>
-            <tbody>
-            {% for q, a, value_html in all_answers %}
-              <tr id="link-to-question-{{q.key}}">
-                <td>
-                  {% if a.taskanswer %}
-                    <a href="{{a.taskanswer.get_absolute_url}}">
-                      {{q.spec.title}}
-                    </a>
-                  {% elif authoring_tool_enabled %}
-                    <a href="{{task.get_absolute_url}}/questions/{{q.key}}">
-                      {{q.spec.title}}
-                    </a>
-                  {% else %}
-                    {{q.spec.title}}
-                  {% endif %}
-                </td>
-                <td>
-                  <div style="float: right; margin: 0 0 .5em .25em;">
-                    {% if not a %}
-                      <span class="label label-warning">Imputed</span>
-                    {% endif %}
-                  </div>
- 
-                  {{value_html|safe}}
-                </td>
-              </tr>
-            {% empty %}
-              <tr><td colspan="3">No questions needed to be answered in this section.</td></tr>
-            {% endfor %}
-            </tbody>
-          </table>
-        </div>
-      </div>
-    </div>
-  {% endif %}
-
-  {% for document in outputs %}
-    <div class="panel panel-default">
-      <div class="panel-heading" role="tab" id="document-{{forloop.counter}}-title">
-        <h4 class="panel-title">
-          {% if document.id %}
-          <div class="pull-right">
-            <span class="glyphicon glyphicon-download-alt"
-              style="cursor: pointer"
-              onclick="download_document('{{document.id|escapejs}}')"> </span>
+      {% if had_any_questions %}
+        <div class="panel panel-default">
+          <div class="panel-heading" rol="tab" id="your-answers-title">
+            <h4 class="panel-title">
+              <a role="button" data-toggle="collapse" data-parent="#accordion" href="#your-answers-body" aria-expanded="true" aria-controls="your-answers-body">
+                Your Answers
+              </a>
+            </h4>
           </div>
-          {% endif %}
+          <div id="your-answers-body" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="your-answers-title">
+            <div class="panel-body output-document">
+              <table class="table">
+                <thead>
+                  <tr>
+                    <th width="40%">Question</th>
+                    <th>Answer</th>
+                  </tr>
+                </thead>
+                <tbody>
+                {% for q, a, value_html in all_answers %}
+                  <tr id="link-to-question-{{q.key}}">
+                    <td>
+                      {% if a.taskanswer %}
+                        <a href="{{a.taskanswer.get_absolute_url}}">
+                          {{q.spec.title}}
+                        </a>
+                      {% elif authoring_tool_enabled %}
+                        <a href="{{task.get_absolute_url}}/questions/{{q.key}}">
+                          {{q.spec.title}}
+                        </a>
+                      {% else %}
+                        {{q.spec.title}}
+                      {% endif %}
+                    </td>
+                    <td>
+                      <div style="float: right; margin: 0 0 .5em .25em;">
+                        {% if not a %}
+                          <span class="label label-warning">Imputed</span>
+                        {% endif %}
+                      </div>
 
-          <a role="button" data-toggle="collapse" data-parent="#accordion" href="#document-{{forloop.counter}}-body" aria-expanded="{% if forloop.first %}true{% endif %}" aria-controls="document-{{forloop.counter}}-body">
-            {{document.title}}
-          </a>
-        </h4>
-      </div>
-      <div id="document-{{forloop.counter}}-body" class="panel-collapse collapse {% if forloop.first %}in{% endif %} output-document" role="tabpanel" aria-labelledby="document-{{forloop.counter}}-title">
-        <div class="panel-body output-document">
-          {{document.html|safe}}
+                      {{value_html|safe}}
+                    </td>
+                  </tr>
+                {% empty %}
+                  <tr><td colspan="3">No questions needed to be answered in this section.</td></tr>
+                {% endfor %}
+                </tbody>
+              </table>
+            </div>
+          </div>
         </div>
-      </div>
-    </div>
-  {% endfor %}
-</div> <!-- /accordion -->
+      {% endif %}
 
-<div style="margin: 2em 0">
-  {% with answers_question=task.is_answer_to_unique %}
-    {% if answers_question and answers_question.task.editor == request.user %}
-      {% if task.project.is_account_project %}
-        {# there is nothing else in the account settings project #}
-        <p><a id="return-to-projects" href="/projects" class="btn btn-success">
-          Return to Projects &raquo;
-        </a></p>
-      {% else %}
-        {% if answers_question.task == answers_question.task.project.root_task %}
-          {# return to project #}
-          <p><a id="return-to-project" href="{{task.project.get_absolute_url}}#tab={{answers_question.question.spec.tab|slugify}}/{{answers_question.question.spec.group|slugify}}/{{answers_question.question.key|slugify}}/{{task.id}}" class="btn btn-success">
-          	{# we used to say 'with other modules in {{task.project.title}}' but there may not be any other modules #}
+      {% for document in outputs %}
+        <div class="panel panel-default">
+          <div class="panel-heading" role="tab" id="document-{{forloop.counter}}-title">
+            <h4 class="panel-title">
+              {% if document.id %}
+              <div class="pull-right">
+                <span class="glyphicon glyphicon-download-alt"
+                  style="cursor: pointer"
+                  onclick="download_document('{{document.id|escapejs}}')"> </span>
+              </div>
+              {% endif %}
+
+              <a role="button" data-toggle="collapse" data-parent="#accordion" href="#document-{{forloop.counter}}-body" aria-expanded="{% if forloop.first %}true{% endif %}" aria-controls="document-{{forloop.counter}}-body">
+                {{document.title}}
+              </a>
+            </h4>
+          </div>
+          <div id="document-{{forloop.counter}}-body" class="panel-collapse collapse {% if forloop.first %}in{% endif %} output-document" role="tabpanel" aria-labelledby="document-{{forloop.counter}}-title">
+            <div class="panel-body output-document">
+              {{document.html|safe}}
+            </div>
+          </div>
+        </div>
+      {% endfor %}
+    </div> <!-- /accordion -->
+
+    <div id="continue-nav "style="margin: 2em 0">
+      {% with answers_question=task.is_answer_to_unique %}
+        {% if answers_question and answers_question.task.editor == request.user %}
+          {% if task.project.is_account_project %}
+            {# there is nothing else in the account settings project #}
+            <p><a id="return-to-projects" href="/projects" class="btn btn-success">
+              Return to Projects &raquo;
+            </a></p>
+          {% else %}
+            {% if answers_question.task == answers_question.task.project.root_task %}
+              {# return to project #}
+              <p><a id="return-to-project" href="{{task.project.get_absolute_url}}#tab={{answers_question.question.spec.tab|slugify}}/{{answers_question.question.spec.group|slugify}}/{{answers_question.question.key|slugify}}/{{task.id}}" class="btn btn-success">
+                {# we used to say 'with other modules in {{task.project.title}}' but there may not be any other modules #}
+                Continue &raquo;
+              </a></p>
+            {% else %}
+              {# return to non-project parent task #}
+              <p><a id="return-to-supertask" href="{{answers_question.task.get_absolute_url}}" class="btn btn-success">
+                Continue Answering {{answers_question.task.title}} &raquo;
+              </a></p>
+            {% endif %}
+            {% if answers_question.question.spec.type == "module-set" %}
+              <form method="post" action="/tasks/start" style="display:inline;">
+                {% csrf_token %}
+                <input type="hidden" name="project" value="{{task.project.id}}"/>
+                <input type="hidden" name="question" value="{{answers_question.question.key}}"/>
+                <input type="hidden" name="previous" value="task"/>
+                <a href="#" onclick="$(this).parent('form').submit(); return false;" class="btn btn-success" title="Add Another {{answers_question.question.answer_type_module.title}} to {{answers_question.question.spec.title}}.">
+                  Start New {{answers_question.question.answer_type_module.title}} &raquo;
+                </a>
+              </form>
+            {% endif %}
+          {% endif %}
+        {% else %}
+          {# every task, except projects, are now subtasks of other tasks, so this only occurs if a task is a subtask to multiple super-tasks #}
+          <p><a href="{{task.project.get_absolute_url}}" class="btn btn-success">
+           {# we used to say 'with other modules in {{task.project.title}}' but there may not be any other modules #}
             Continue &raquo;
           </a></p>
-        {% else %}
-          {# return to non-project parent task #}
-          <p><a id="return-to-supertask" href="{{answers_question.task.get_absolute_url}}" class="btn btn-success">
-            Continue Answering {{answers_question.task.title}} &raquo;
-          </a></p>
         {% endif %}
-        {% if answers_question.question.spec.type == "module-set" %}
-          <form method="post" action="/tasks/start" style="display:inline;">
-            {% csrf_token %}
-            <input type="hidden" name="project" value="{{task.project.id}}"/>
-            <input type="hidden" name="question" value="{{answers_question.question.key}}"/>
-            <input type="hidden" name="previous" value="task"/>
-            <a href="#" onclick="$(this).parent('form').submit(); return false;" class="btn btn-success" title="Add Another {{answers_question.question.answer_type_module.title}} to {{answers_question.question.spec.title}}.">
-              Start New {{answers_question.question.answer_type_module.title}} &raquo;
-            </a>
-          </form>
-        {% endif %}
+      {% endwith %}
+
+      {% if can_review %}
+        <p><a href="{{task.project.get_absolute_url}}/list#task-{{task.id}}" class="btn btn-default">
+          <em class="glyphicon glyphicon-list"></em>
+          Review &raquo;
+        </a></p>
       {% endif %}
-    {% else %}
-      {# every task, except projects, are now subtasks of other tasks, so this only occurs if a task is a subtask to multiple super-tasks #}
-      <p><a href="{{task.project.get_absolute_url}}" class="btn btn-success">
-	  	{# we used to say 'with other modules in {{task.project.title}}' but there may not be any other modules #}
-        Continue &raquo;
-      </a></p>
-    {% endif %}
-  {% endwith %}
+    </div> <!-- / continue panel -->
 
-  {% if can_review %}
-    <p><a href="{{task.project.get_absolute_url}}/list#task-{{task.id}}" class="btn btn-default">
-      <em class="glyphicon glyphicon-list"></em>
-      Review &raquo;
-    </a></p>
-  {% endif %}
-</div> <!-- / continue panel -->
-</div> <!-- focus-area-wrapper -->
-
+  </div> <!-- focus-area-wrapper -->
 
   <div class="col-spacer col-xs-0 col-sm-0 col-md-0 col-lg-1">
     &nbsp;
   </div>
 
-
-  <div id="context-area-wrapper" class="col-xs-0 col-sm-2 col-md-3 col-lg-3"
-       style="background-color: rgb(225, 225, 225);
-              border-radius: 6px;
-              /*color: white;*/
-             ">
+  <div id="progress-project-area-wrapper" class="col-xs-0 col-sm-2 col-md-3 col-lg-3"
+       style="background-color: rgb(230, 230, 230); border-radius: 6px;">
     {% include "task-progress-project-list.html" with previous="question" %}
   </div>
-
-
-
-
 </div>
 
 {% endblock %}
