--- a/templates/task-base.html
+++ b/templates/task-base.html
@@ -61,7 +61,7 @@
   }
 
   .breadcrumb {
-    font-size: .8em;
+    font-size: 1.0em;
   }
 </style>
 {% endblock %}
@@ -77,8 +77,8 @@
       </a>
     </li>
     <li class="hidden-xs">
-      <a href="{{task.project.organization.get_absolute_url}}">
-        {{task.project.organization.name}}
+      <a href="{{task.project.portfolio.get_absolute_url}}">
+        {{task.project.portfolio.title}}
       </a>
     </li>
     {% for parent_project in task.project.get_parent_projects %}
@@ -95,37 +95,18 @@
       </a>
     </li>
 
+    {% if is_question_page %}
+         <li class="hidden-xs">
+      <a href="{{task.project.get_absolute_url}}#{{current_group}}">
+        {{current_group}}
+      </a>
+    </li>
+    {% endif %}
+
     {% endif %}
     <li class="active">
       {{task.title}}
     </li>
-
-    <!-- <div class="row"> -->
-<!--
-      <div class="col-spacer col-xs-0 col-sm-0 col-md-0 col-lg-1">
-        &nbsp;
-      </div>
-
-      <div class="col-xs-12 col-sm-8 col-md-7 col-lg-7" style="text-align: center;">
-        <a href="{{task.project.get_absolute_url}}">
-          {{task.project.title}}
-        </a>
-        /
-        {{task.title}}
-      </div>
-
-        <div class="col-spacer col-xs-0 col-sm-0 col-md-0 col-lg-1">
-        &nbsp;
-      </div>
--->
-<!--       <div id="context-area-wrapper" class="col-xs-0 col-sm-2 col-md-3 col-lg-3">
-          {% if is_admin %}
-          <div class="pull-right hidden-xs">
-            <a href="#" onclick="return delete_task();"><span class="glyphicon glyphicon-trash" style="color: #BBB;"></span></a>
-          </div>
-          {% endif %}
-      </div> -->
-
 
     {% if is_admin %}
     <div class="pull-right hidden-xs">
