Proper display of group tasks on question page
Complete the gyrations nessary to find other apps/tasks in
a top level grouping from within the question page in order
to give user the impression they are within a question set within
a module.

Basically, this involves re-creating much of the project.html page within
task-progress-project-list.html. So we need to get new information
from within the guidedmodules.views.show_question method to
have the data we need to pass to task-progress-project-list.html.

This also pretty tricky, because some questions that appear in
the task-progress-project-list do not have task ids b/c they
have not been started. So we have to create the form to start
a new task. And then we have to try and line up the form with the
non form items.

This hack will probably only work for a flat app with all modules
scoped at the same level. We are scoping everything at the same
level in order to get parameter sharing better between the simulate
groups until we can do deeper refactoring of the database.

It would propbably make sense (and it is noted in the code) to refactor
the code block that generates the history text.
modified:   guidedmodules/views.py
modified:   templates/project.html
modified:   templates/task-base.html
modified:   templates/task-progress-project-list.html
modified:   templates/question.html
modified:   templates/task-progress-question-list.html

modified:   VERSION
modified:   guidedmodules/module_logic.py
modified:   siteapp/models.py
modified:   siteapp/static/css/govready-q.css
modified:   templates/module-finished.html
modified:   templates/project-base.html
modified:   templates/task-progress-question-list.html

--- a/templates/task-progress-project-list.html
+++ b/templates/task-progress-project-list.html
@@ -1,27 +1,21 @@
-<div style="margin: 12px 0 12px 6px; text-align: center;">
-    <a href="{{task.project.get_absolute_url}}" style="color:black;">
-      <div style="color: #787878;">
-        <span class="glyphicon glyphicon-list-alt" style=""></span>&nbsp;<!-- {{task.project.title}} -->
-        PTA (Privacy Threshold Analysis)
-      </div>
+<div class="truncate" style="margin: 12px 0 12px 6px; text-align: left; ">
+    PROJECT:&nbsp; <a href="{{task.project.get_absolute_url}}" style="color:#444;">
+      {{task.project.title}}
     </a>
+    {% if current_group %}
+    <br>
+    SECTION:&nbsp; <a href="{{task.project.get_absolute_url}}#{{current_group}}" style="color:#444;">
+      {{current_group}}
+    </a>
+    {% endif %}
 </div>
 
 {% for pt in task_progress_project_list %}
-  {% if pt.group == "PTA (Privacy Threshold Analysis)" %}
-    <div class="truncate" style="margin: 0 0 6px 0; padding: 2px; font-size: .8em;">
-      {% if pt.title == task.title %}
-      <span class="glyphicon glyphicon-play-circle"> </span> <b>{{pt.title}}</b>
-        <!-- <div class="truncate" 
-             style="font-weight: bold;
-                    border: 1px solid #ddd;
-                    padding: 12px 4px 12px 4px;
-                    background-color: rgb(247, 247, 247);
-                    margin-bottom: 4px;
-                    text-align: center;
-                   "> -->
-          <!-- <span class="glyphicon glyphicon-play-circle"> </span> --> <!-- &raquo; {{task.title}} &laquo; -->
-        <!-- </div> -->
+  {% if pt.group == current_group %}
+    <div class="truncate" style="margin: 0 0 6px 0; padding: 2px; font-size: 1.0em;text-align:left;">
+      {% if pt.task_id == task.id %}
+      <span class="glyphicon glyphicon-play-circle"> </span> <b>{{task.title}}</b>
+        {% if context|length > 0 %}
         <div id="question-history-context">
           <ul>
           {% if context %}
@@ -29,53 +23,44 @@
             {% include "task-progress-question-list.html" with previous="question" %}
             <div style="font-size: 10px; line-height: 120%; padding-left: 2em; color: #222;">
             <li>&nbsp;</li>
-            <!-- <li>&middot;</li>
-            <li>&middot;</li>
-            <li>&middot;</li> -->
             </div>
             <li>
               ...and we&rsquo;re done
             </li>
           {% endif %}
           </ul>
-      </div> <!-- /question-history-context -->
+        </div> <!-- /question-history-context -->
+        {% endif %}
       {% else %}
-      <div class="truncate" style="color: #787878;">
-        <span class="glyphicon glyphicon-unchecked"> </span> <a href="{{pt.link}}">{{pt.title}}</a>
-      </div>
+        {% if pt.link == "/TODO" %}
+          {% if pt.type == "module" or pt.type == "module-set" %}
+            {# Start a task directly using the module type in the specification. #}
+            <form class="" method="post" action="/tasks/start"
+              onclick="$(this).submit();" style="cursor: pointer;display: inline;text-align: left;">
+              {% csrf_token %}
+              <input type="hidden" name="project" value="{{task.project.id}}"/>
+              <input type="hidden" name="question" value="{{pt.id}}"/>
+              <input type="hidden" name="previous" value="project"/>
+          {% else %}
+            {# Go to the Apps Catalog to select an app that implements the protocol specified on the question. #}
+            <form method="get" action="/store"
+              onclick="$(this).submit();" style="cursor: pointer; display: inline">
+              <input type="hidden" name="q" value="{{task.project.root_task.id}}/{{q.question.key}}">
+          {% endif %}
+              <div class="btn btn-sm btn-link truncate" style="color: black; font-size: 1.0em; text-align: left;">
+                <span class="glyphicon glyphicon-unchecked"> </span> <!-- Start --> {{pt.title}}
+              </div>
+            </form>
+        {% else %}
+          <form class="truncate">&nbsp;&nbsp;
+            {% if pt.task_started and pt.task_answered %}
+              <span class="glyphicon glyphicon-check"> </span><a href="{{pt.link}}" style="color: black;"> {{pt.title}}</a>
+            {% elif pt.task_started %}
+              <span class="glyphicon glyphicon-edit"> </span> <a href="{{pt.link}}" style="color: black;"> {{pt.title}}</a>
+            {% endif %}
+          </form>
+          {% endif %}
       {% endif %}
     </div>
   {% endif %}
-{% endfor %}
-
-
-{% for q in context %}
-{% if not q.imputed %}
-<!--   <div id="link-to-question-{{q.key}}" 
-      class="truncate
-             {% if q.is_this_question %}this{% else %}other{% endif %}
-             "
-      style="margin: 0px 0px 0px 0px;
-             {% if not q.is_this_question %}height: 30px;{% endif %}
-             {% if q.is_this_question %}max-height: 400px;{% endif %}
-
-             font-size: .8em; padding: 2px 0px 0px 3px; text-overflow: ellipsis;
-             {% if q.is_this_question %}
-             border: 1px solid #999;
-             {% elif q.skipped %}
-             {% elif q.answered %}
-             {% endif %}
-            ">
-    {% if not q.is_this_question %}<a href="{{q.link}}?previous={{previous|urlencode}}"></a>{% endif %}
-
-    {% if q.is_this_question  %}<span class="glyphicon glyphicon-play-circle"> </span>
-    {% elif q.skipped %}<span class="glyphicon glyphicon-edit"> </span>
-    {% elif q.answered %}<span class="glyphicon glyphicon-check"> </span>
-    {% else %}<span class="glyphicon glyphicon-unchecked"> </span>{% endif %}
-
-    {{q.title}}
-
-    {% if not q.is_this_question and q.can_link %}</a>{% endif %}
-  </div> -->
-{% endif %}
 {% endfor %}
